fixed broken css link products_wedding2.html

--- a/luqman_files/assets/css/JennysStylesheet.css
+++ b/luqman_files/assets/css/JennysStylesheet.css
@@ -241,7 +241,7 @@ a:hover {
 
 .footer {
     padding: 30px 0px;
-    background-image: url("../../PhotoStudio/footer2.png");
+    background-image: url("../../assets/images/footer2.png");
     background-size: cover;
 
     border-radius: 20px;
